--- a/ntalk/package.json
+++ b/ntalk/package.json
@@ -1,17 +1,15 @@
 {
   "name": "ntalk",
-  "version": "0.0.0",
-  "private": true,
+  "description": "Ntalk - Contacts",
+  "version": "0.1.0",
+  "private": false,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
     "ejs": "~2.3.3",
-    "express": "~4.13.1",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "express": "~4.13.1"
   }
 }
