--- a/ntalk/package.json
+++ b/ntalk/package.json
@@ -10,6 +10,7 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "ejs": "~2.3.3",
-    "express": "~4.13.1"
+    "express": "~4.13.1",
+    "express-load": "^1.1.15"
   }
 }
