--- a/ntalk/package.json
+++ b/ntalk/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.3.2",
     "ejs": "~1.0.0",
     "express": "~4.6.1",
-    "express-load": "^1.1.15"
+    "express-load": "^1.1.14",
+    "express-session": "^1.6.5"
   }
 }
