--- a/ntalk/package.json
+++ b/ntalk/package.json
@@ -12,6 +12,7 @@
     "ejs": "~1.0.0",
     "express": "~4.6.1",
     "express-load": "^1.1.14",
-    "express-session": "^1.6.5"
+    "express-session": "^1.6.5",
+    "method-override": "^2.1.1"
   }
 }
