--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "cookie-parser": "~1.3.2",
     "ejs": "~1.0.0",
     "express": "~4.6.1",
-    "express-load": "^1.1.14",
-    "express-session": "^1.6.5",
-    "method-override": "^2.1.1"
+    "express-load": "~1.1.14",
+    "express-session": "~1.6.5",
+    "method-override": "~2.1.1",
+    "socket.io": "^1.2.1"
   }
 }
