--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-load": "~1.1.14",
     "express-session": "~1.6.5",
     "method-override": "~2.1.1",
+    "mongoose": "^3.8.13",
     "socket.io": "^1.2.1"
   }
 }
