--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.1.0",
   "private": false,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js",
+    "test":"NODE_ENV=test ./node_modules/.bin/mocha test/**/*.js"
   },
   "dependencies": {
     "body-parser": "~1.4.3",
@@ -20,5 +21,10 @@
     "redis": "^0.11.0",
     "socket.io": "^1.2.1",
     "socket.io-redis": "^0.1.4"
+  },
+  "devDependencies": {
+    "mocha": "^2.3.3",
+    "should": "^7.1.0",
+    "supertest": "^1.1.0"
   }
 }
