--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "private": false,
   "scripts": {
-    "start": "node app.js",
+    "start": "node clusters.js",
     "test":"NODE_ENV=test ./node_modules/.bin/mocha test/**/*.js"
   },
   "dependencies": {
