--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "body-parser": "~1.4.3",
+    "compression": "^1.6.0",
     "connect-redis": "^2.5.1",
     "cookie-parser": "~1.3.2",
     "ejs": "~1.0.0",
