--- a/config.json
+++ b/config.json
@@ -1,7 +1,15 @@
 {
   "SECRET": "Ntalk",
   "KEY": "ntalk.sid",
-  "MAX_AGE": {
+  "MONGODB": {
+    "test": "mongodb://localhost:27017/ntalk_test",
+    "development": "mongodb://localhost:27017/ntalk"
+  },
+  "REDIS": {
+    "host": "localhost",
+    "port": 6379
+  },
+  "CACHE": {
     "maxAge": 3600000
   }
 }
