Improve code / performance

--- a/package.json
+++ b/package.json
@@ -2,21 +2,22 @@
   "name": "ntalk",
   "description": "Ntalk - Contacts",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "scripts": {
-    "start": "DEBUG=* node clusters >> app.log",
+    "start": "DEBUG=* node server",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha test/**/*.js"
   },
   "dependencies": {
     "body-parser": "~1.4.3",
-    "compression": "^1.6.0",
-    "connect-redis": "^2.5.1",
+    "compression": "^1.0.8",
+    "connect-redis": "^2.0.0",
     "cookie-parser": "~1.3.2",
     "csurf": "^1.8.3",
     "ejs": "~1.0.0",
     "express": "~4.6.1",
     "express-load": "~1.1.14",
     "express-session": "~1.6.5",
+    "forever-monitor": "^1.2.3",
     "hiredis": "^0.1.17",
     "method-override": "~2.1.1",
     "mongoose": "^3.8.13",
